--- a/testes.ipynb
+++ b/testes.ipynb
@@ -12,8 +12,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T01:52:45.313928Z",
-     "start_time": "2024-05-07T01:52:43.141670Z"
+     "end_time": "2024-05-07T02:32:28.603099Z",
+     "start_time": "2024-05-07T02:32:26.127735Z"
     }
    },
    "cell_type": "code",
@@ -38,8 +38,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T01:52:52.152038Z",
-     "start_time": "2024-05-07T01:52:45.314870Z"
+     "end_time": "2024-05-07T02:32:38.885108Z",
+     "start_time": "2024-05-07T02:32:31.631746Z"
     }
    },
    "cell_type": "code",
@@ -56,8 +56,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T01:52:59.894041Z",
-     "start_time": "2024-05-07T01:52:57.167602Z"
+     "end_time": "2024-05-07T02:32:47.239663Z",
+     "start_time": "2024-05-07T02:32:43.488709Z"
     }
    },
    "cell_type": "code",
@@ -98,8 +98,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T01:53:00.662746Z",
-     "start_time": "2024-05-07T01:53:00.448141Z"
+     "end_time": "2024-05-07T02:34:22.088439Z",
+     "start_time": "2024-05-07T02:34:21.769308Z"
     }
    },
    "cell_type": "code",
@@ -139,7 +139,7 @@
       "link at iteration 19 https://www.quintoandar.com.br/imovel/894464503/alugar/apartamento-2-quartos-mooca-sao-paulo\n",
       "link at iteration 20 https://www.quintoandar.com.br/imovel/894405424/alugar/apartamento-2-quartos-vila-gustavo-sao-paulo\n",
       "link at iteration 21 https://www.quintoandar.com.br/imovel/894082081/alugar/apartamento-2-quartos-vila-ema-sao-paulo\n",
-      "link at iteration 22 https://www.quintoandar.com.br/imovel/894484451/alugar/apartamento-2-quartos-chacara-santo-antonio-zona-leste-sao-paulo\n"
+      "link at iteration 22 https://www.quintoandar.com.br/imovel/893819258/alugar/apartamento-3-quartos-jardim-das-laranjeiras-sao-paulo\n"
      ]
     }
    ],
@@ -158,8 +158,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T02:13:53.937609Z",
-     "start_time": "2024-05-07T02:13:53.932926Z"
+     "end_time": "2024-05-07T02:34:39.128978Z",
+     "start_time": "2024-05-07T02:34:39.126243Z"
     }
    },
    "cell_type": "code",
@@ -176,13 +176,13 @@
    ],
    "id": "94c6e558687ca41a",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T02:15:44.819467Z",
-     "start_time": "2024-05-07T02:15:42.725796Z"
+     "end_time": "2024-05-07T02:35:59.204082Z",
+     "start_time": "2024-05-07T02:35:25.145151Z"
     }
    },
    "cell_type": "code",
@@ -192,7 +192,8 @@
     "\n",
     "delta_y = 800\n",
     "stock = []\n",
-    "for link in links[0:2]:\n",
+    "\n",
+    "for link in links:\n",
     "    driver.get(link)\n",
     "    driver.implicitly_wait(10)\n",
     "    ActionChains(driver) \\\n",
@@ -207,13 +208,13 @@
    ],
    "id": "48a1847a0eb99352",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T02:18:41.745019Z",
-     "start_time": "2024-05-07T02:18:41.725012Z"
+     "end_time": "2024-05-07T02:36:14.268329Z",
+     "start_time": "2024-05-07T02:36:14.247248Z"
     }
    },
    "cell_type": "code",
@@ -223,13 +224,55 @@
     {
      "data": {
       "text/plain": [
-       "  suite_area                             street  \\\n",
-       "0      25 m²                       Alameda Iraé   \n",
-       "1      49 m²  Rua Doutor Djalma Pinheiro Franco   \n",
+       "   suite_area                             street  \\\n",
+       "0       25 m²                       Alameda Iraé   \n",
+       "1       49 m²  Rua Doutor Djalma Pinheiro Franco   \n",
+       "2       35 m²               Avenida Prestes Maia   \n",
+       "3      155 m²          Rua Egídio Alves da Costa   \n",
+       "4       64 m²                  Rua Manuel Leiroz   \n",
+       "5       55 m²                Rua das Pitombeiras   \n",
+       "6       60 m²             Rua Doutor Renato Maia   \n",
+       "7       34 m²               Rua Galeno de Castro   \n",
+       "8       70 m²                Rua Gaspar Lourenço   \n",
+       "9       68 m²               Rua Vieira de Morais   \n",
+       "10      60 m²       Rua Pascoal Ranieri Mazzilli   \n",
+       "11      49 m²                 Rua Major Quedinho   \n",
+       "12     170 m²                          Rua Natal   \n",
+       "13     100 m²                    Rua Barraquinha   \n",
+       "14     134 m²            Avenida Ramalho Ortigão   \n",
+       "15      75 m²                    Rua Jaboticabal   \n",
+       "16      34 m²              Rua Brigadeiro Tobias   \n",
+       "17     103 m²              Rua Carneiro da Cunha   \n",
+       "18     143 m²     Rua Lucília de Camargo Barbosa   \n",
+       "19      58 m²                    Rua do Oratório   \n",
+       "20      60 m²                   Rua São Patrício   \n",
+       "21      58 m²                   Avenida Vila Ema   \n",
+       "22      75 m²                          Rua Reims   \n",
        "\n",
-       "                     neighborhood condominium     tax asking_price  \n",
-       "0         Indianópolis, São Paulo      R$ 483    R$ 0     R$ 3.100  \n",
-       "1  Vila Santa Catarina, São Paulo      R$ 532  R$ 107     R$ 3.200  "
+       "                                neighborhood condominium     tax asking_price  \n",
+       "0                    Indianópolis, São Paulo      R$ 483    R$ 0     R$ 3.100  \n",
+       "1             Vila Santa Catarina, São Paulo      R$ 532  R$ 107     R$ 3.200  \n",
+       "2                          Centro, São Paulo      R$ 702    R$ 0     R$ 1.950  \n",
+       "3                       Sapopemba, São Paulo        R$ 0    R$ 0     R$ 2.800  \n",
+       "4                   Vila Penteado, São Paulo      R$ 900   R$ 35     R$ 3.000  \n",
+       "5           Vila Parque Jabaquara, São Paulo        R$ 0   R$ 74     R$ 1.780  \n",
+       "6         Jardim Jaú (zona Leste), São Paulo       R$ 50    R$ 0     R$ 2.000  \n",
+       "7                      Jurubatuba, São Paulo      R$ 380   R$ 25     R$ 1.916  \n",
+       "8                    Vila Mariana, São Paulo      R$ 844  R$ 317     R$ 4.200  \n",
+       "9                      Campo Belo, São Paulo      R$ 872  R$ 260     R$ 6.500  \n",
+       "10                    Vila Mendes, São Paulo      R$ 448    R$ 0     R$ 2.100  \n",
+       "11                         Centro, São Paulo      R$ 774  R$ 213     R$ 3.100  \n",
+       "12                  Vila Bertioga, São Paulo     Incluso  R$ 250     R$ 4.500  \n",
+       "13             Vila Regente Feijó, São Paulo     Incluso   R$ 75     R$ 4.500  \n",
+       "14                Vila Gumercindo, São Paulo    R$ 1.200  R$ 522     R$ 6.890  \n",
+       "15                  Vila Bertioga, São Paulo      R$ 833  R$ 169     R$ 4.700  \n",
+       "16  Centro Histórico de São Paulo, São Paulo      R$ 350    R$ 0     R$ 1.344  \n",
+       "17                  Vila da Saúde, São Paulo    R$ 1.004  R$ 509     R$ 6.000  \n",
+       "18                 Vila Antonieta, São Paulo        R$ 0  R$ 147     R$ 3.600  \n",
+       "19                          Mooca, São Paulo      R$ 890   R$ 34     R$ 2.000  \n",
+       "20                   Vila Gustavo, São Paulo      R$ 903  R$ 202     R$ 2.400  \n",
+       "21                       Vila Ema, São Paulo      R$ 480    R$ 0     R$ 2.650  \n",
+       "22         Jardim das Laranjeiras, São Paulo      R$ 975    R$ 0     R$ 2.500  "
       ],
       "text/html": [
        "<div>\n",
@@ -277,17 +320,212 @@
        "      <td>R$ 107</td>\n",
        "      <td>R$ 3.200</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35 m²</td>\n",
+       "      <td>Avenida Prestes Maia</td>\n",
+       "      <td>Centro, São Paulo</td>\n",
+       "      <td>R$ 702</td>\n",
+       "      <td>R$ 0</td>\n",
+       "      <td>R$ 1.950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>155 m²</td>\n",
+       "      <td>Rua Egídio Alves da Costa</td>\n",
+       "      <td>Sapopemba, São Paulo</td>\n",
+       "      <td>R$ 0</td>\n",
+       "      <td>R$ 0</td>\n",
+       "      <td>R$ 2.800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>64 m²</td>\n",
+       "      <td>Rua Manuel Leiroz</td>\n",
+       "      <td>Vila Penteado, São Paulo</td>\n",
+       "      <td>R$ 900</td>\n",
+       "      <td>R$ 35</td>\n",
+       "      <td>R$ 3.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>55 m²</td>\n",
+       "      <td>Rua das Pitombeiras</td>\n",
+       "      <td>Vila Parque Jabaquara, São Paulo</td>\n",
+       "      <td>R$ 0</td>\n",
+       "      <td>R$ 74</td>\n",
+       "      <td>R$ 1.780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>60 m²</td>\n",
+       "      <td>Rua Doutor Renato Maia</td>\n",
+       "      <td>Jardim Jaú (zona Leste), São Paulo</td>\n",
+       "      <td>R$ 50</td>\n",
+       "      <td>R$ 0</td>\n",
+       "      <td>R$ 2.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>34 m²</td>\n",
+       "      <td>Rua Galeno de Castro</td>\n",
+       "      <td>Jurubatuba, São Paulo</td>\n",
+       "      <td>R$ 380</td>\n",
+       "      <td>R$ 25</td>\n",
+       "      <td>R$ 1.916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>70 m²</td>\n",
+       "      <td>Rua Gaspar Lourenço</td>\n",
+       "      <td>Vila Mariana, São Paulo</td>\n",
+       "      <td>R$ 844</td>\n",
+       "      <td>R$ 317</td>\n",
+       "      <td>R$ 4.200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>68 m²</td>\n",
+       "      <td>Rua Vieira de Morais</td>\n",
+       "      <td>Campo Belo, São Paulo</td>\n",
+       "      <td>R$ 872</td>\n",
+       "      <td>R$ 260</td>\n",
+       "      <td>R$ 6.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>60 m²</td>\n",
+       "      <td>Rua Pascoal Ranieri Mazzilli</td>\n",
+       "      <td>Vila Mendes, São Paulo</td>\n",
+       "      <td>R$ 448</td>\n",
+       "      <td>R$ 0</td>\n",
+       "      <td>R$ 2.100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>49 m²</td>\n",
+       "      <td>Rua Major Quedinho</td>\n",
+       "      <td>Centro, São Paulo</td>\n",
+       "      <td>R$ 774</td>\n",
+       "      <td>R$ 213</td>\n",
+       "      <td>R$ 3.100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>170 m²</td>\n",
+       "      <td>Rua Natal</td>\n",
+       "      <td>Vila Bertioga, São Paulo</td>\n",
+       "      <td>Incluso</td>\n",
+       "      <td>R$ 250</td>\n",
+       "      <td>R$ 4.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>100 m²</td>\n",
+       "      <td>Rua Barraquinha</td>\n",
+       "      <td>Vila Regente Feijó, São Paulo</td>\n",
+       "      <td>Incluso</td>\n",
+       "      <td>R$ 75</td>\n",
+       "      <td>R$ 4.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>134 m²</td>\n",
+       "      <td>Avenida Ramalho Ortigão</td>\n",
+       "      <td>Vila Gumercindo, São Paulo</td>\n",
+       "      <td>R$ 1.200</td>\n",
+       "      <td>R$ 522</td>\n",
+       "      <td>R$ 6.890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>75 m²</td>\n",
+       "      <td>Rua Jaboticabal</td>\n",
+       "      <td>Vila Bertioga, São Paulo</td>\n",
+       "      <td>R$ 833</td>\n",
+       "      <td>R$ 169</td>\n",
+       "      <td>R$ 4.700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>34 m²</td>\n",
+       "      <td>Rua Brigadeiro Tobias</td>\n",
+       "      <td>Centro Histórico de São Paulo, São Paulo</td>\n",
+       "      <td>R$ 350</td>\n",
+       "      <td>R$ 0</td>\n",
+       "      <td>R$ 1.344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>103 m²</td>\n",
+       "      <td>Rua Carneiro da Cunha</td>\n",
+       "      <td>Vila da Saúde, São Paulo</td>\n",
+       "      <td>R$ 1.004</td>\n",
+       "      <td>R$ 509</td>\n",
+       "      <td>R$ 6.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>143 m²</td>\n",
+       "      <td>Rua Lucília de Camargo Barbosa</td>\n",
+       "      <td>Vila Antonieta, São Paulo</td>\n",
+       "      <td>R$ 0</td>\n",
+       "      <td>R$ 147</td>\n",
+       "      <td>R$ 3.600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>58 m²</td>\n",
+       "      <td>Rua do Oratório</td>\n",
+       "      <td>Mooca, São Paulo</td>\n",
+       "      <td>R$ 890</td>\n",
+       "      <td>R$ 34</td>\n",
+       "      <td>R$ 2.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>60 m²</td>\n",
+       "      <td>Rua São Patrício</td>\n",
+       "      <td>Vila Gustavo, São Paulo</td>\n",
+       "      <td>R$ 903</td>\n",
+       "      <td>R$ 202</td>\n",
+       "      <td>R$ 2.400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>58 m²</td>\n",
+       "      <td>Avenida Vila Ema</td>\n",
+       "      <td>Vila Ema, São Paulo</td>\n",
+       "      <td>R$ 480</td>\n",
+       "      <td>R$ 0</td>\n",
+       "      <td>R$ 2.650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>75 m²</td>\n",
+       "      <td>Rua Reims</td>\n",
+       "      <td>Jardim das Laranjeiras, São Paulo</td>\n",
+       "      <td>R$ 975</td>\n",
+       "      <td>R$ 0</td>\n",
+       "      <td>R$ 2.500</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 7
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# a unica coisa que falta agora e limpar os dados e ta literalmente pronta a estrega 1",
+   "id": "b262b05b81215a43"
   }
  ],
  "metadata": {
