Arrumadno o notebook para ficar mais como um relatório

--- a/testes.ipynb
+++ b/testes.ipynb
@@ -2,11 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "af370d35",
+   "metadata": {},
+   "source": [
+    "# Projeto - ANÁLISE DE TEXTO DE FONTES DESESTRUTURADAS E WEB \n",
+    "\n",
+    "## Análise dos dados imobiliários de São Paulo a partir de dados do site Quinto Andar\n",
+    "\n",
+    "Feito por: Augusto Carneiro, Guilherme Rameh - 05/2024\n",
+    "\n",
+    "------\n",
+    "\n",
+    "## Proposta:\n",
+    "\n",
+    "A partir do enunciado do projeto, o grupo se propõe a coletar dados por meio de web scrapping no site \"Quinto Andar\", e analisar o cenário imobilipario de São Paulo a partir deles."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a954aa3b168973eb",
    "metadata": {},
    "source": [
-    "# parte 1\n",
-    "pegar os links de cada um dos conjuntos"
+    "## Coleta dos Dados\n",
+    "A página principal de busca de apartamentos do Quinto Andar lista apartamentos disponíveis, mas se você não clicar nele, faltam informações que achamos importantes. Assim, primeiro salvaremos o máximo de links para apartamentos possíveis, e então acessamos cada um para pegar as informações que queremos usar. Essas informações são transformadas em um DataFrame da biblioteca Pandas, e salvo em um arquivo do tipo *parquet* para não precisarmos executar a busca de dados a cada inicialização deste arquivo."
    ]
   },
   {
@@ -51,6 +69,14 @@
     "driver.implicitly_wait(10)\n",
     "\n",
     "wait = WebDriverWait(driver, timeout=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44f79271",
+   "metadata": {},
+   "source": [
+    "Na célula abaixo, a busca e armazenamento dos links de cada apartamento. Isso é necessário pois clicamos no botão de \"mostrar mais\" para obtermos apartamentos antes inacessíveis."
    ]
   },
   {
@@ -2614,9 +2640,7 @@
    "id": "22e97d24869ef1d5",
    "metadata": {},
    "source": [
-    "# parte 2\n",
-    "pra cada conjunto, obter informaçoes de interess\n",
-    "e"
+    "para cada link, obter aas informações de interesse e guardar em um DF"
    ]
   },
   {
@@ -7744,7 +7768,7 @@
    "id": "6a727c88",
    "metadata": {},
    "source": [
-    "## Parte III - Análise dos dados\n",
+    "## Análise dos dados\n",
     "\n",
     "Agora exploraremos os dados que conseguimos, analisando relação entre localidade, preço do metro quadrado e ???"
    ]
